Connection from Login to Database
- modified unit tests, models, services, controllers, and repositories involving account, auth, and login.